@@ -12,3 +12,4 @@ Sat Nov 24 2001 David Reveman (c99drn@cs.umu.se)
 Mon Nov 26 2001 David Reveman (c99drn@cs.umu.se)
 
 	Added KeyEvent support
+	Added ViewportMove function
